# tx3-lift

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  docker-tracker.yml  release-binary.yml
crates/tx3-lift/: Cargo.toml
crates/tx3-lift-cardano/: Cargo.toml
crates/tx3-lift-cardano/src/: datum.rs  error.rs  lib.rs  lifting.rs  matching.rs  payload.rs  summarize.rs
crates/tx3-lift-cardano/tests/: summarize_datum.rs
crates/tx3-lift-cardano/tests/fixtures/: sp_deposit_71e89010.cbor.hex
crates/tx3-lift/src/: anchors.rs  error.rs  expr.rs  fingerprint.rs  lib.rs  lift.rs  match_.rs  payload.rs  specialize.rs
crates/tx3-lift/tests/: smoke.rs
docs/: integration-test-report.md  tracker-database.md
docs/superpowers/plans/: 2026-06-12-anchor-gate-matching.md  2026-06-16-anchor-strength-gating.md  2026-06-16-tracker-docker-image.md
docs/superpowers/specs/: 2026-06-12-anchor-gate-matching-design.md  2026-06-16-anchor-strength-gating-design.md  2026-06-16-tracker-docker-image-design.md
