[workspace]
resolver = "2"
members = ["crates/tx3-lift", "crates/tx3-lift-cardano"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/tx3-lift"
homepage = "https://github.com/tx3-lang/tx3-lift"
authors = ["TxPipe <hello@txpipe.io>"]

[workspace.dependencies]
tx3-tir = "0.17.0"
tx3-sdk = "0.11.0"
pallas = ">=1.0.0-alpha, <2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
bech32 = "0.11"
