[workspace]
resolver = "2"
members = ["crates/tx3-lift", "crates/tx3-lift-cardano", "bin/tracker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/tx3-lift"
homepage = "https://github.com/tx3-lang/tx3-lift"
authors = ["TxPipe <hello@txpipe.io>"]

[workspace.dependencies]
tx3-tir = "0.17.0"
tx3-sdk = "0.11.0"
pallas = ">=1.0.0-alpha, <2.0.0"
utxorpc = "0.12"
utxorpc-spec = "0.17"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
bech32 = "0.11"
