[package]
name = "tx3-lift-cardano"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cardano implementation of tx3-lift matchers and lifters"

[dependencies]
tx3-lift = { path = "../tx3-lift" }
tx3-tir = { workspace = true }
tx3-sdk = { workspace = true }
pallas = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
