[package]
name = "tx3-lift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Enrich on-chain transactions with semantic context provided by Tx3 descriptions"

[dependencies]
tx3-tir = { workspace = true }
tx3-sdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
